# ClassMag

./: .gitignore  CMakeLists.txt  README.md
doc/: LICENSE
environments/ParallelTempering/: CMakeLists.txt  prProcs.cpp  ptProcs.cpp  ptProcs.hpp
executables/: CMakeLists.txt  approximantPaper.cpp  approximantPaperXY.cpp  cw_temperature.cpp  defaultPT.cpp  freezing_temperature.cpp  isingpt.cpp  mpitest.cpp  tsaiDisorder.cpp
include/ClassMag/: Geometry.hpp  MonteCarlo.hpp
input/: testinput.txt
source/: CMakeLists.txt
source/Base/: CMakeLists.txt  couplingLookup.cpp  couplings_kelvin.cpp  default_orderparameters.cpp  dipole.cpp  dipole_real_space.cpp  dipole_reciprocal_space.cpp  dipole_spherical.cpp  hasxStagMag.cpp  numerics.cpp  orderParameter.cpp  rkky.cpp
source/Base/include/: approximant_paper_measurements.hpp  couplingLookup.hpp  couplings_kelvin.hpp  default_orderparameters.hpp  dipole.hpp  dipole_profile.hpp  dipole_real_space.hpp  dipole_reciprocal_space.hpp  dipole_spherical.hpp  ewaldprofile.hpp  hasxStagMag.hpp  interactionBase.hpp  linearCoupling.hpp  magnetizationData.hpp  nearestNeighbor.hpp  numerics.hpp  orderParameter.hpp  rkky.hpp  simulationProcess.hpp  spinStructure.hpp
source/Environments/: CMakeLists.txt
source/Environments/ParallelTempering/: CMakeLists.txt  PT_Return.hpp  print_pt_return.cpp  print_pt_return.hpp  ptProcs.cpp  ptProcs.hpp
source/FileIO/: CMakeLists.txt  ParseOutputValues.cpp  StreamManager.cpp  filesystem.cpp  optionsReadin.cpp  scancmd.cpp
source/FileIO/include/: ParseOutputValues.hpp  StreamManager.hpp  couplingStringMaps.hpp  filesystem.hpp  optionsReadin.hpp  readCouplings.hpp  readDefaultSettings.hpp  readLattice.hpp  readMCO.hpp  readSpins.hpp  scancmd.hpp  stringextractions.hpp
source/Geometry/: CMakeLists.txt  predefLattices.cpp  reciprocal.cpp  tsai.cpp
source/Geometry/include/: array.hpp  disorderedLattices.hpp  euclidean.hpp  hasx.hpp  lattice.hpp  matrix.hpp  pointMetric.hpp  predefLattices.hpp  qartesian.hpp  reciprocal.hpp
source/Interactions/: CMakeLists.txt  couplinglookup.cpp  nearestNeighbor.cpp  orderParameter.cpp  rkky.cpp
source/Interactions/include/: couplingLookup.hpp  nearestNeighbor.hpp  orderParameter.hpp
source/MonteCarlo/: CMakeLists.txt  extendedEnsembles.cpp  mcFunctions.cpp  postProcessing.cpp
source/MonteCarlo/include/: AnisotropyVectors.hpp  ClockModelManager.hpp  HeatBath.hpp  MonteCarloBase.hpp  PredefAnisotropyVectors.hpp  VectorModelManager.hpp  XYModelManager.hpp  extendedEnsembles.hpp  mcFunctions.hpp  mcProfile.hpp  postProcessing.hpp
source/Parallelism/: CMakeLists.txt  messengers.cpp
source/Parallelism/include/: ArrayMessage.hpp  messengers.hpp
tests/: CMakeLists.txt  heatcapTestMC.cpp  test.cpp  testDisorder.cpp  testEwald.cpp  testGeometry.cpp  testMC.cpp  testPT.cpp
tests/manual/: CMakeLists.txt  fileio.cpp  heatcapTestMC.cpp  heisen_nn.cpp  heisen_nn_sweep.cpp  heisen_rkky.cpp  investigate_plateau.cpp  ising_nn.cpp  ising_rkky.cpp  ising_town.cpp  test.cpp  testAbstraction.cpp  testDisorder.cpp  testEwald.cpp  testMPI.cpp  testPyrochlore.cpp  xy.cpp  xy_kf.cpp
