cmake_minimum_required(VERSION 3.15)
project(ClassMag VERSION 0.0.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG  -march=native -mno-avx -O3 -ffast-math")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mno-avx -Og")
add_subdirectory(${CMAKE_SOURCE_DIR}/source)
if(FALSE)
add_subdirectory(${CMAKE_SOURCE_DIR}/environments)
endif()
add_subdirectory(${CMAKE_SOURCE_DIR}/tests)