add_library(
    ClassMag_Base
    SHARED
    ${CMAKE_CURRENT_SOURCE_DIR}/orderParameter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/couplingLookup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rkky.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/hasxStagMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/interactionBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/numerics.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/numerics.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dipole.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/default_orderparameters.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/default_orderparameters.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/approximant_paper_measurements.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dipole_real_space.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dipole_reciprocal_space.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dipole_spherical.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/couplings_kelvin.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/approximant_paper_measurements.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/linearCoupling.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dipole.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/hasxStagMag.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/magnetizationData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/rkky.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/nearestNeighbor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/interactionBase.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/couplingLookup.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/orderParameter.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dipole_profile.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dipole_real_space.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dipole_reciprocal_space.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/dipole_spherical.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/couplings_kelvin.hpp
)

target_link_libraries(
    ClassMag_Base
    PUBLIC
    ClassMag_Geometry
)

target_include_directories(
    ClassMag_Base
    PUBLIC
    ${CMAKE_SOURCE_DIR}/source
)